@@ -4,6 +4,7 @@ KNOWN BUGS:
 Changes since 20060711a:
 - Bugfix: handle 400...499 codes in reply to ARTICLE command properly.
   Reported by Martin Brunzel.
+- Bugfix: if a fatal fetch error occurs, proceed to next server.
 - Update: the leafnode.spec.in file was updated to fix rpmbuild issues
   and instruct the packager how the %doc-umentation can be relocated.
   Reported by Kevin Bulgrien.
